<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="我的总收益"
                    android:textColor="@color/C1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_total_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textColor="@color/C1"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/white_has_content_shape">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设备总收益"
                        android:textColor="@color/C3" />

                    <TextView
                        android:id="@+id/tv_field_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/C3" />
                </LinearLayout>

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/C3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="合伙总收益"
                        android:textColor="@color/C3" />

                    <TextView
                        android:id="@+id/tv_parnter_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/C3" />
                </LinearLayout>

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/C3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="场地总收益"
                        android:textColor="@color/C3" />

                    <TextView
                        android:id="@+id/tv_investor_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/C3" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/C3"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:src="@drawable/clock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="最后更新时间:  "
                android:textColor="@color/C1" />

            <TextView
                android:id="@+id/tv_income_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2018:01:01 00:00"
                android:textColor="@color/C1" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/C1" />

            <LinearLayout
                android:id="@+id/ll_refresh_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="刷新"
                    android:textColor="@color/C1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_to_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:src="@drawable/left_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择身份"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_to_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:src="@drawable/right_icon" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/banner_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:layerType="software"
            android:visibility="visible">

            <com.cheng.tonglepai.view.CustomViewPager
                android:id="@+id/vp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_touzi_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_touzi"
                android:textColor="@color/C2"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/orange_corner_shape"
                android:gravity="center_horizontal"
                android:text="@string/go_touzi_tips"
                android:textColor="@color/C1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_to_investor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/learn_more"
                android:textColor="@color/C2"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_hehuo_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_chuang"
                android:textColor="@color/C3"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_corner_shape"
                android:gravity="center_horizontal"
                android:text="@string/go_hehuo_tips"
                android:textColor="@color/C1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_to_partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/learn_more_other"
                android:textColor="@color/C3"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_field_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="提供场地"
                android:textColor="@color/C4"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/red_corner_shape"
                android:gravity="center_horizontal"
                android:text="自有场地，要出租"
                android:textColor="@color/C1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_to_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="了解场地方权益 >"
                android:textColor="@color/C4"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_to_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="了解更多：4000-366-118" />
    </LinearLayout>
</LinearLayout>